--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <section class="download-section">
-        <a href="SEU_LINK_MEDIAFIRE_AQUI.exe" download class="download-button">Baixar Delta Boost Agora</a>
+        <a href="https://www.mediafire.com/file/em1rcgb0ne1l4j8/DeltaBoostInstaller.exe/file" download class="download-button">Baixar Delta Boost Agora</a>
         <p class="small-text">Versão 1.0.0 | Compatível com Windows 10/11</p>
     </section>
 
